# Apple-SiliconValley-Internship

./: .gitignore  README.md
backend/: check_server.py  fallback_server.py  pyproject.toml  requirements.txt  test_enhanced_ai.py  test_enhanced_service.py  test_integration.py
backend/app/: main.py
backend/app/api/: auth.py  routes.py  routes_simple.py
backend/app/db/: mongo.py
backend/app/google/: calendar.py
backend/app/nlp/: ai_service.py  ai_service.py.bak  ai_service.py.enhanced  ai_service.py.new  ai_service_enhanced.py  extractor.py  extractor.py.enhanced  extractor_enhanced.py  model_utils.py
backend/app/schemas/: task.py
backend/docs/: ai_enhancements.md
config/: .env.example  docker-compose.yml  google_oauth_example.json
docs/: architecture.md  data_flow.md  oauth_setup.md
electron/: package-lock.json  package.json  preload.ts
electron/src/: ipcHandlers.ts  main.ts  preload.ts
electron/src/utils/: env.ts
frontend/: next.config.js  package-lock.json  package.json
frontend/src/chat/: ChatPane.tsx  ChatStore.tsx  LeftSidebar.tsx  MessageBubble.tsx  MessageComposer.tsx  RightPanel.tsx
frontend/src/components/: AppStore.tsx  CalendarView.tsx  DocumentScanner.tsx  EmailOrganizer.tsx  FeatureCard.tsx  FinanceAnalyze.tsx  Header.tsx  ScheduleView.tsx  (+6 more)
models/: README.md
models/prompts/: extraction_prompt.md
scripts/: init_db.sh  run_dev.cmd  run_dev.ps1  run_dev.sh  setup_env.sh
task-manager-react/: package.json  tailwind.config.js
task-manager-react/public/: index.html  manifest.json
task-manager-react/src/: App.js  index.css
(+8 files in other folders)
